--- a/carousel.css
+++ b/carousel.css
@@ -18,8 +18,8 @@
     }
     .carouselCostume {
         position: relative;
-        width: 100%;
-        height: 25vh ;
+        width: 100% !important; 
+        height: 100% !important ;
         overflow: hidden;
     }
     .btnSlide{
